feat: make fetch_user_job_applications include jobfield
